--- a/Ocean.Inside.Project/Views/Shared/_Layout.cshtml
+++ b/Ocean.Inside.Project/Views/Shared/_Layout.cshtml
@@ -201,5 +201,7 @@
     </div>
     <script src="/js/core.min.js"></script>
     <script src="/js/script.js"></script>
+
+    @RenderSection("scripts", required: false)
 </body>
 </html>
