--- a/Ocean.Inside.Project/Views/Home/Index.cshtml
+++ b/Ocean.Inside.Project/Views/Home/Index.cshtml
@@ -150,7 +150,7 @@
                     <div data-items="1" data-sm-items="2" data-lg-items="3" data-stage-padding="5" data-loop="false" data-margin="30" data-mouse-drag="false" data-dots="true" data-nav="true" class="owl-carousel owl-dots-primary">
                         <div class="owl-item">
                             <div class="team-member">
-                                <div class="team-member-img-wrap"><img src="/images/Home/100x100.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
+                                <div class="team-member-img-wrap"><img src="/images/Home/icon-09-20x20.png" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
                                 <div class="team-member-body">
                                     <div class="offset-top-20">
                                         <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">Аня Данисевич</div>
@@ -159,14 +159,11 @@
                                         <p class="text-small text-italic text-silver-chalice">"Огромное спасибо за прекрасно организованный и в то же время совершенно непредсказуемый отдых на ГОА. Индия не оставила равнодушным никого из нашей группы. Принцип Шанти-шанти действовал на протяжении всего отдыха. Ничего не планируй, что суждено, то сбудется, поэтому раслабьтесь и не переживайте. Приключения ждали нас каждый день. Это был лучший отдых в моей жизни. Я люблю движение, люблю все новое, поэтому схема- пляж -отель -ресторан не для меня. Наш отдых был активным, познавательным, но в то же время очень комфортным. Огромное спасибо Яне, жене, Илье за неповторимую атмосферу праздника. Вы перевернули мой взгляд на путешествия. Моя жизнь уже не будет прежней. Хочу снова с вами, хоть на край земли...Скучаю. до новых встреч."</p>
                                     </div>
                                 </div>
-                                <div class="team-member-hover-content offset-top-20 offset-lg-top-0">
-                                    <button type="button" data-toggle="modal" data-target="#teamMember" class="btn btn-primary">View FULL INFO</button>
-                                </div>
                             </div>
                         </div>
                         <div class="owl-item">
                             <div class="team-member">
-                                <div class="team-member-img-wrap"><img src="/images/Home/100x100.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
+                                <div class="team-member-img-wrap"><img src="/images/Home/icon-09-20x20.png" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
                                 <div class="team-member-body">
                                     <div class="offset-top-20">
                                         <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">Вероника Остин</div>
@@ -175,14 +172,11 @@
                                         <p class="text-small text-italic text-silver-chalice">"Безмерно благодарна ребятам за незабываемый отдых. Мы жили просто в таком ритме, который хочется поддерживать и дальше. Куча новых открытий, один день интереснее другого. Когда в один день может происходить столько всего, что потом удивляешься, как вы вообще всё успели. Ребята позитивные, легки на подъём (немаловажное!). Я на день 5-6 осознала, что не думаю вообще ни о чём и не вспоминаю Беларусь. Это самое замечательное в путешествиях, когда погружаешься в них с головой - именно это и ждёт вас с этими ребятами. Мыслей и впечатлений очень много и не уверена, что смогу всё высказать! Я ни на секунду не пожалела."</p>
                                     </div>
                                 </div>
-                                <div class="team-member-hover-content offset-top-20 offset-lg-top-0">
-                                    <button type="button" data-toggle="modal" data-target="#teamMember" class="btn btn-primary">View FULL INFO</button>
-                                </div>
                             </div>
                         </div>
                         <div class="owl-item">
                             <div class="team-member">
-                                <div class="team-member-img-wrap"><img src="/images/Home/100x100.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
+                                <div class="team-member-img-wrap"><img src="/images/Home/icon-09-20x20.png" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
                                 <div class="team-member-body">
                                     <div class="offset-top-20">
                                         <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">Татьяна Лелявко</div>
@@ -191,14 +185,11 @@
                                         <p class="text-small text-italic text-silver-chalice">"Синдром Гоа… теперь не просто слова для меня. Передать это сложно. Я не могу вам сказать, чем пахнет счастье, как выглядит умиротворение, вы не ощутите рай, пока не окажетесь там. Гоа меняет… Навсегда ! Вы только позвольте Ему это сделать… Не стоит ехать, чтобы просто посмотреть… почувствуйте его, вдохните, не суетитесь… Смотрите в глаза…прикасайтесь…слушайте ! Позвольте волнам унести грязь и тяжесть из вашей души, оставьте это там… на дне, и может тогда, чувствуя скорость, вы поймете - то не ветер шумит, а души вашей крылья. Позвольте себе разбудить Океан внутри ! Евгений и Наталья, спасибо Вам… За мой Океан внутри !!!."</p>
                                     </div>
                                 </div>
-                                <div class="team-member-hover-content offset-top-20 offset-lg-top-0">
-                                    <button type="button" data-toggle="modal" data-target="#teamMember" class="btn btn-primary">View FULL INFO</button>
-                                </div>
                             </div>
                         </div>
                         <div class="owl-item">
                             <div class="team-member">
-                                <div class="team-member-img-wrap"><img src="/images/Home/100x100.jpg" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
+                                <div class="team-member-img-wrap"><img src="/images/Home/icon-09-20x20.png" width="100" height="100" alt="" class="img-circle img-responsive center-block"></div>
                                 <div class="team-member-body">
                                     <div class="offset-top-20">
                                         <div class="team-member-title text-small text-ubold text-uppercase text-spacing-200 text-gray-base">Александр Жук</div>
@@ -207,15 +198,12 @@
                                         <p class="text-small text-italic text-silver-chalice">"Гоа! Пьянящий запах свободы и отрешенности, другой мир, который манит, завораживает, заставляет изменить себя и пересмотреть свои жизненные ценности, меняет твое сознание и оставляет на всю жизнь отпечаток в твоем сердце. Эта поездка была очаровательна, бесподобна и незабываема. И все это благодаря замечательной компании людей, малознакомых, однако за этот короткий период ставших такими близкими! Поездка подарила огромную массу незабываемых впечатлений и ярких эмоций которыми я буду жить в ближайшем обозримом будущем. Спасибо Жене, он помог нам за то небольшое время максимально полно проникнуться бытом, культурой, жизнью этой самобытной земли. Боюсь без его советов и организаторских способностей мы б не смогли в полной мере ощутить что же это за терро инкогнито - Индия, что такое Гоа. Эта поездка была одна из самых незабываемых в моей жизни. Я уверен что рано или поздно, так или иначе я вернусь туда...)."</p>
                                     </div>
                                 </div>
-                                <div class="team-member-hover-content offset-top-20 offset-lg-top-0">
-                                    <button type="button" data-toggle="modal" data-target="#teamMember" class="btn btn-primary">View FULL INFO</button>
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="offset-top-40"><a href="testimonials.html" class="btn btn-primary">View More</a></div>
+            @*<div class="offset-top-40"><a href="testimonials.html" class="btn btn-primary">View More</a></div>*@
         </div>
     </section>
     <section class="section-80 section-md-bottom-70">
