--- a/Ocean.Inside.Project/Views/Tour/AddStep.cshtml
+++ b/Ocean.Inside.Project/Views/Tour/AddStep.cshtml
@@ -1,8 +1,34 @@
-﻿@model dynamic
+﻿@model Ocean.Inside.Project.Models.TourStepViewModel
 
-@{
-    ViewBag.Title = "title";
-    Layout = "_Layout";
-}
+<h2 class="offset-top-25">Добавить событие</h2>
 
-<h2>title</h2>
+<div class="box bg-white offset-top-25" style="min-width: 45%">
+    <form method="post" action="@Url.Action("AddStep", "Tour")">
+        @Html.AntiForgeryToken()
+
+        <div class="form-group form-group-xs">
+            <label for="Title" class="form-label">Заголовок</label>
+            <input name="Title" id="Title" class="form-control" type="text" />
+        </div>
+
+        <div class="form-group form-group-xs">
+            <label for="Day" class="form-label">День начала</label>
+            <input name="Day" id="Day" class="form-control" type="text" />
+        </div>
+
+        <div class="form-group form-group-xs">
+            <label for="Duration" class="form-label">Количество дней</label>
+            <input name="Duration" id="Duration" class="form-control" type="text" />
+        </div>
+
+        <div class="form-group">
+            <label for="Description" class="form-label">Описание</label>
+            <textarea name="Description" id="Description" class="form-control"></textarea>
+        </div>
+
+        <div class="form-group">
+            <input type="submit" value="Добавить" class="btn btn-success" />
+            <input type="hidden" value="@Model.TourId" id="TourId" name="TourId" />
+        </div>
+    </form>
+</div>
