--- a/Ocean.Inside.Project/Views/Tour/GroupTours.cshtml
+++ b/Ocean.Inside.Project/Views/Tour/GroupTours.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Ocean.Inside.Project.Models.GroupTourViewModel>
+﻿@using PagedList.Mvc
+@model PagedList.IPagedList<Ocean.Inside.Project.Models.GroupTourViewModel>
 
 <main class="page-content">
     <section class="section-80 bg-wild-wand">
@@ -22,7 +23,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="glyphicon glyphicon-plus" href="@Url.Action("AddGroupTour", "Tour")" alt="Добавить тур" title="Добавить"></a>
+
+                    @if (Request.IsAuthenticated && User.IsInRole("Admin"))
+                    {
+                        <a class="glyphicon glyphicon-plus" href="@Url.Action("AddGroupTour", "Tour")" alt="Добавить тур" title="Добавить"></a>
+                    }
                     <div class="range range-xs-center range-sm-left range-md-center offset-top-50 offset-md-top-25">
                         @foreach (var groupTour in Model)
                         {
@@ -31,16 +36,7 @@
                     </div>
                     <div class="offset-top-50">
 
-                        <nav>
-                            <ul class="pagination-classic">
-                                <li class="active"><span>1</span></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#">4</a></li>
-                                <li><a href="#">...</a></li>
-                                <li><a href="#">12</a></li>
-                            </ul>
-                        </nav>
+                        @Html.PagedListPager(Model, page => Url.Action("GroupTours", new { skip = page }), PagedListRenderOptions.ClassicPlusFirstAndLast)
                     </div>
                 </div>
             </div>
