fix bug with edit and removing redundant images

--- a/Ocean.Inside.Project/Views/Shared/_Layout.cshtml
+++ b/Ocean.Inside.Project/Views/Shared/_Layout.cshtml
@@ -19,8 +19,8 @@
                     <div class="rd-navbar-inner">
                         <div class="rd-navbar-panel">
                             <button data-rd-navbar-toggle=".rd-navbar-nav-wrap" class="rd-navbar-toggle"><span></span></button>
-                            <div class="rd-navbar-brand veil reveal-md-block"><a href="@Url.Action("Index", "Home")" class="brand-name"><img height="55" src="/images/Layout/logo.jpg" alt=""></a></div>
-                            <div class="rd-navbar-brand veil-md reveal-tablet-md-inline-block"><a href="@Url.Action("Index", "Home")" class="brand-name"><img height="45" src="/images/Layout/logo.jpg" alt=""></a></div>
+                            <div class="rd-navbar-brand veil reveal-md-block"><a href="@Url.Action("Index", "Home")" class="brand-name"><img height="55" src="/images/Layout/logo.png" alt=""></a></div>
+                            <div class="rd-navbar-brand veil-md reveal-tablet-md-inline-block"><a href="@Url.Action("Index", "Home")" class="brand-name"><img height="45" src="/images/Layout/logo.png" alt=""></a></div>
                         </div>
                         <div class="rd-navbar-nav-wrap">
                             <ul class="rd-navbar-nav">
