--- a/Ocean.Inside.Project/Views/Tour/GroupTours.cshtml
+++ b/Ocean.Inside.Project/Views/Tour/GroupTours.cshtml
@@ -36,7 +36,7 @@
                     </div>
                     <div class="offset-top-50">
 
-                        @Html.PagedListPager(Model, page => Url.Action("GroupTours", new { skip = page }), PagedListRenderOptions.ClassicPlusFirstAndLast)
+                        @Html.PagedListPager(Model, page => Url.Action("GroupTours", new { page }), PagedListRenderOptions.PageNumbersOnly)
                     </div>
                 </div>
             </div>
