--- a/Ocean.Inside.Project/Views/Shared/_HeaderSliderPartial.cshtml
+++ b/Ocean.Inside.Project/Views/Shared/_HeaderSliderPartial.cshtml
@@ -1,8 +1,10 @@
 ﻿<div data-height="" data-min-height="400px" data-simulate-touch="false" data-slide-effect="fade" class="swiper-container swiper-slider">
     <div class="swiper-wrapper">
-        <div data-slide-bg="/images/Layout/1920x900.jpg" class="swiper-slide"></div>
-        <div data-slide-bg="/images/Layout/1920x900_1.jpg" class="swiper-slide"></div>
-        <div data-slide-bg="/images/Layout/1920x900_2.jpg" class="swiper-slide"></div>
+        <div data-slide-bg="/images/Layout/main_background_slider_9.png" class="swiper-slide"></div>
+        <div data-slide-bg="/images/Layout/main_background_slider_8.png" class="swiper-slide"></div>
+        <div data-slide-bg="/images/Layout/main_background_slider_4.png" class="swiper-slide"></div>
+        <div data-slide-bg="/images/Layout/main_background_slider_2.png" class="swiper-slide"></div>
+        <div data-slide-bg="/images/Layout/main_background_slider_6.png" class="swiper-slide"></div>
     </div>
     <div class="swiper-caption-absolute">
         <div class="shell">
